@@ -883,12 +883,12 @@ public class CommandUtil {
                     .filter(directory -> directory.getFileName() != null)
                     .map(directory -> directory.getFileName())
                     .map(fileName -> fileName.toString())
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (null != jarFs) {
                 return templates.stream().map(t -> t
                         .replace(jarFs.getSeparator(), ""))
-                        .collect(Collectors.toList());
+                        .toList();
             } else {
                 return templates;
             }
