@@ -20,7 +20,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * Provides the set of Ballerina Reserved Keywords to be used at the symbol factory.
@@ -51,7 +50,7 @@ public class BallerinaKeywordsProvider {
                         }
                     })
                     .filter(Objects::nonNull)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (ClassNotFoundException e) {
             return Collections.emptyList();
         }
