@@ -34,7 +34,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.StringJoiner;
-import java.util.stream.Collectors;
 
 /**
  * Represents a table type descriptor.
@@ -89,7 +88,7 @@ public class BallerinaTableTypeSymbol extends AbstractStructuredTypeSymbol imple
 
                     return !isKeyedLangLibFunction(functionSymbol, types) || !isNeverTypeKeyConstraint(types);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
