@@ -291,7 +291,7 @@ public class GlobalVariableRefAnalyzer {
         if (!dependencyOrder.isEmpty()) {
             List<BSymbol> symbolsProvidersOrdered = this.dependencyOrder.stream()
                     .map(nodeInfo -> nodeInfo.symbol)
-                    .collect(Collectors.toList());
+                    .toList();
             this.dependencyOrder.clear();
             return symbolsProvidersOrdered;
         }
@@ -382,7 +382,7 @@ public class GlobalVariableRefAnalyzer {
         List<BLangVariable> sortedGlobalVars = sorted.stream()
                 .filter(varMap::containsKey)
                 .map(varMap::get)
-                .collect(Collectors.toList());
+                .toList();
 
         if (sortedGlobalVars.size() != this.pkgNode.globalVars.size()) {
             List<BLangVariable> symbolLessGlobalVars = this.pkgNode.globalVars.stream()
@@ -401,7 +401,7 @@ public class GlobalVariableRefAnalyzer {
         List<BLangConstant> sortedConstants = sorted.stream()
                 .filter(varMap::containsKey)
                 .map(varMap::get)
-                .collect(Collectors.toList());
+                .toList();
 
         if (sortedConstants.size() != this.pkgNode.constants.size()) {
             List<BLangConstant> symbolLessGlobalVars = this.pkgNode.constants.stream()
@@ -487,7 +487,7 @@ public class GlobalVariableRefAnalyzer {
             Collections.reverse(cycle);
             List<BSymbol> symbolsOfCycle = cycle.stream()
                     .map(n -> n.symbol)
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (doesContainAGlobalVar(symbolsOfCycle)) {
                 emitErrorMessage(symbolsOfCycle);
@@ -520,7 +520,7 @@ public class GlobalVariableRefAnalyzer {
         secondSubList.addAll(firstSubList);
 
         List<BLangIdentifier> names = secondSubList.stream()
-                .map(this::getNodeName).filter(Objects::nonNull).collect(Collectors.toList());
+                .map(this::getNodeName).filter(Objects::nonNull).toList();
         dlog.error(firstNode.get().getPosition(), DiagnosticErrorCode.GLOBAL_VARIABLE_CYCLIC_DEFINITION, names);
     }
 
