@@ -81,7 +81,7 @@ public class ResourcePathCompletionItemBuilder {
             item.setFilterText(ResourcePathCompletionUtil
                     .getFilterTextForClientResourceAccessAction(resourceMethodSymbol, segments));
             return item;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     private static CompletionItem buildCompletionItem(ResourceMethodSymbol resourceMethodSymbol, 
