@@ -70,7 +70,7 @@ public class QNameRefCompletionUtil {
                         || symbol.kind() == SymbolKind.TYPE_DEFINITION
                         || symbol.kind() == SymbolKind.CLASS
                         || symbol instanceof VariableSymbol)
-                .collect(Collectors.toList())).orElseGet(ArrayList::new);
+                .toList()).orElseGet(ArrayList::new);
     }
 
     /**
@@ -109,7 +109,7 @@ public class QNameRefCompletionUtil {
                 QNameRefCompletionUtil.getAlias(qNameRef));
         return module.map(moduleSymbol -> moduleSymbol.allSymbols().stream()
                 .filter(predicate)
-                .collect(Collectors.toList()))
+                .toList())
                 .orElseGet(ArrayList::new);
     }
 
@@ -126,7 +126,7 @@ public class QNameRefCompletionUtil {
                 QNameRefCompletionUtil.getAlias(qNameRef));
         return module.map(symbol -> symbol.allSymbols().stream()
                 .filter(CommonUtil.typesFilter())
-                .collect(Collectors.toList()))
+                .toList())
                 .orElseGet(ArrayList::new);
     }
 
