@@ -43,7 +43,7 @@ public class URIConverterTest {
         URIConverter subject = new URIConverter(baseURI, new HashMap<>());
 
         List<URI> urls = patten.convert(subject, null)
-                               .collect(Collectors.toList());
+                               .toList();
 
         URI expected = URI.create("http://staging.central.ballerina.io:9090/modules/natasha/foo.bar/1.0.5/");
         Assert.assertEquals(urls, Collections.singletonList(expected));
